Detailed how to set up Minecraft Python binding